--- a/css/estilo.css
+++ b/css/estilo.css
@@ -104,7 +104,7 @@ button {
 #menu p {
     display: block;
     height: 70px;
-    border: rgb(228, 225, 225) solid 1px;
+    border:red (228, 225, 225) solid 1px;
     width: 100%;
     border-collapse: collapse;
     text-decoration: none;
@@ -115,7 +115,7 @@ p a {
     margin-top: 10px;
     padding-top: 20px;
     display: block;
-    color: whitesmoke;
+    color:black;
     text-decoration: none;
 }
 
