--- a/css/estilo.css
+++ b/css/estilo.css
@@ -37,12 +37,13 @@ label, input {
 }
 
 form {
-    margin-top: 5px;
+    margin-top: 10%;
     display: inline-block;
-    width: 31%;
+    width: 40%;
     height: 450px;
     padding: 5px;
-    border: 1px solid rgba(0, 0, 0, .4);
+    margin-right: auto;
+    margin-left: 25%;
 }
 
 form label, input {
@@ -53,43 +54,11 @@ form input {
     margin-right: 15px;
 }
 
-table {
-    float: left;
-    border-collapse: collapse;
-}
-
-table th, td {
-    border: solid black 1px;
-    padding: 2px;
-    font-size: 10pt;
-}
-
-#tabelaVendasCaixa {
-    width: 800px;
-    margin: 30px auto;
-}
-
-#tabelaNotaFiscal {
-    width: 1100px;
-}
-
-table#produto {
-    width: 750px;
-    margin-top: 20px;
-}
-
 #cadastro {
-    float: right;
     width: 800px;
-    margin-right: 10px;
+    margin-right: auto;
+    margin-left: auto;
     margin-top: 10px;
-}
-
-button {
-    font-size: 10pt;
-    padding: 5px;
-    cursor: pointer;
-    font-weight: bolder;
 }
 
 #menu {
@@ -122,7 +91,7 @@ p a {
 section#principal {
     border: palevioletred 1px solid;
     width: 89%;
-    height: 600px;
+    height: 650px;
     float: right;
 }
 
@@ -152,24 +121,23 @@ form input#btnCadastrar {
     display: inline-block;
 }
 
-#vendaCliente {
+#clienteVenda {
     display: block;
-    width: 70%;
-    height: 150px;
-    float: right;
-    margin-right: 20px;
-    margin-top: 200px;
     border: rgba(0, 0, 0, .2) solid 2px;
-    padding: 5PX;
+    height: 90%;
+    width: 30%;
+    float: right;
+    padding: 5px;
+    margin-top: -8%;
+    margin-right: 1%;
 }
 
 #saidaDados {
-    width: 90%;
+    width: 99%;
     border: royalblue 1px solid;
-    margin-top: 15%;
-    float: left;
-    margin-right: 0px;
     display: block;
+    float: left;
+    margin-top: 120%;
 }
 
 #vendaCliente  input, labe l{
@@ -180,6 +148,7 @@ legend {
     text-align: center;
     font-size: 15pt;
     margin-top: 0px;
+    padding: 5px;
 }
 
 #notaFiscal input, label {
@@ -222,7 +191,7 @@ legend {
 }
 
 
-fieldset#formEndereco {
+#formEndereco {
     margin-left: auto;
     margin-right: auto;
 }
