--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,40 +25,22 @@
     margin-top: 80px;
 }
 
-label, input {
-    display: block  ;   
-    font-size: 10pt;
-    margin-bottom: 10px;
-}
-
 form {
-    margin-top: 10%;
-    display: inline-block;
-    width: 35%;
-    height: 450px;
-    padding: 20px;
-    margin-right: auto;
-    margin-left: 25%;
+    margin-top: 1px;
+    padding: 5px;
     border: rgba(0, 0, 0, .1) solid 1px;
+    height: 98%;
+    width: 35%;
+    float: left;
 }
 
-form label, input {
-    display: inline;
-}
-
-#cadastro {
-    width: 800px;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 10px;
-}
 
 #menu {
     text-align: center;
     display: block;
     width: 10%;
     float: left;
-    height: 650px;
+    height: 698%;
     border: blueviolet solid 1px;
 }
 
@@ -87,12 +69,14 @@ section#principal {
     float: right;
 }
 
-section#btn {
-    border: royalblue 1px solid;
-    width: 89%;
-    height: 50px;
+aside {
+    border: rgba(0, 0, 0, .1) solid 1px;
+    width: 60%;
+    margin-right: 5px;
     float: right;
-    margin-top: 0px;
+    margin-top: 1px;
+    height: 98%;
+    padding: 5px;
 }
 
 form input#btnCadastrar {
@@ -102,14 +86,6 @@ form input#btnCadastrar {
     width: 30%;
     margin-left: 35%;
     height: 25px;
-}
-
-#relatorioGerencialVendas input, label {
-    display: inline-block;
-}
-
-#itensSelecionados input, label {
-    display: inline-block;
 }
 
 #clienteVenda {
@@ -142,10 +118,6 @@ legend {
     padding: 5px;
 }
 
-#notaFiscal input, label {
-    display: inline-block;
-}
-
 #fecharVenda {
     width: 20%;
     height: 500px;
@@ -154,7 +126,6 @@ legend {
     margin-right: 10px;
     padding: 10px;
     border: rgba(0, 0, 0, .2) solid 2px;
-
 }
 
 #fecharVenda h4 {
@@ -185,4 +156,13 @@ legend {
 #formEndereco {
     margin-left: auto;
     margin-right: auto;
+}
+
+th {
+    border: 1px solid;
+    border-collapse: collapse;
+    font-size: 10pt;
+    background-color: rgba(0, 0, 0, .7);
+    color: whitesmoke;
+    padding: 3px;
 }
