--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,10 +25,10 @@
     margin-top: 80px;
 }
 
-form {
+form#cadastro {
     margin-top: 1px;
     padding: 5px;
-    border: rgba(0, 0, 0, .1) solid 1px;
+    border: red solid 1px;
     height: 98%;
     width: 35%;
     float: left;
@@ -46,7 +46,7 @@ form {
 
 #menu p {
     display: block;
-    height: 20%;
+    height: 40px;
     border: red solid 1px;
     width: 100%;
     border-collapse: collapse;
@@ -54,12 +54,13 @@ form {
     text-align: center;
 }
 
-p a {
+#menu p a {
     margin-top: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
     display: block;
     color:black;
     text-decoration: none;
+
 }
 
 section#principal {
@@ -162,7 +163,10 @@ th {
     border: 1px solid;
     border-collapse: collapse;
     font-size: 10pt;
-    background-color: rgba(0, 0, 0, .7);
-    color: whitesmoke;
     padding: 3px;
 }
+
+    form#consultas {
+        width: 100%;
+        border: seagreen 1px solid;
+    }
