--- a/css/estilo.css
+++ b/css/estilo.css
@@ -41,13 +41,13 @@ form#cadastro {
     width: 10%;
     float: left;
     height: 698%;
-    border: blueviolet solid 1px;
+    border: #8a2be2 solid 1px;
+
 }
 
 #menu p {
     display: block;
     height: 40px;
-    border: red solid 1px;
     width: 100%;
     border-collapse: collapse;
     text-decoration: none;
@@ -60,6 +60,8 @@ form#cadastro {
     display: block;
     color:black;
     text-decoration: none;
+    height: 40px;
+
 
 }
 
