--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,93 +25,175 @@
     margin-top: 80px;
 }
 
-form#cadastro {
-    margin-top: 1px;
-    padding: 5px;
-    border: red solid 1px;
-    height: 98%;
-    width: 35%;
-    float: left;
+label{
+    display: block  ;   
+    font-size: 10pt;
+    margin-bottom: 5px; 
+    font: bolder;
+    
+}
+input {
+    background-color: white;
+    border: solid 1px #d6d6d6;
+    color: rgb(74 72 72);
+    padding: 5px 20px;
+    width: 100%;
+    align-items: center;
+    
+
+}
+ .inp {
+    background-color: #f2f7f2;
+    border: none;
+    color: rgb(102, 6, 6);
+    padding: 5px 32px;
+    text-decoration: #3c075f;
+    margin: 4px 2px;
+    cursor: auto;
+    width: 80%;
 }
 
+#feminino, #masculino {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+form {
+    display:inline-block;
+    width: 31%;
+    height: 400px;
+    padding: 5px;
+    border: none;
+}
+
+form label, input {
+    display: inline;
+}
+
+form input {
+    margin-right: 15px;
+}
+
+table {
+    float: left;
+    border-collapse: collapse;
+}
+
+table th, td {
+    border: solid black 1px;
+    padding: 2px;
+    font-size: 10pt;
+}
+
+#tabelaVendasCaixa {
+    width: 800px;
+    margin: 30px auto;
+}
+
+#tabelaNotaFiscal {
+    width: 1100px;
+}
+
+table#produto {
+    width: 750px;
+    margin-top: 20px;
+}
+
+#cadastro {
+    float: right;
+    width: 800px;
+    margin-right: 10px;
+    margin-top: 10px;
+}
 
 #menu {
-    text-align: center;
-    display: block;
-    width: 10%;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #b2b0b4;
+    height: 650px;
     float: left;
-    height: 698%;
-    border: #8a2be2 solid 1px;
-
+    width: 10%;
+    display: block;
 }
 
 #menu p {
     display: block;
-    height: 15%;
+    height: 70px;
+    border: rgb(228, 225, 225) solid 1px;
     width: 100%;
     border-collapse: collapse;
     text-decoration: none;
     text-align: center;
-    border: red 1px solid;
 }
 
-#menu p a {
+p a {
     margin-top: 10px;
-    padding-top: 10px;
+    padding-top: 20px;
     display: block;
-    color:black;
+    color: whitesmoke;
     text-decoration: none;
-    height: 40px;
-
-
 }
 
 section#principal {
     border: palevioletred 1px solid;
     width: 89%;
-    height: 650px;
+    height: 600px;
     float: right;
 }
 
-aside {
-    border: rgba(0, 0, 0, .1) solid 1px;
-    width: 60%;
-    margin-right: 5px;
+section#btn {
+    border: royalblue 1px solid;
+    width: 89%;    background-color: white;
+    border: solid 1px #d6d6d6;
+    color: rgb(74 72 72);
+    padding: 5px 32px;
+    width: 100%;
+    height: 50px;
     float: right;
-    margin-top: 1px;
-    height: 98%;
-    padding: 5px;
+    margin-top: 0px;
 }
 
 form input#btnCadastrar {
     margin-top: 20px;
     cursor: pointer;
     line-height: 15px;
-    width: 30%;
-    margin-left: 35%;
+    width: 60%;
+    margin-left: 60px;
     height: 25px;
 }
 
-#clienteVenda {
+#relatorioGerencialVendas input, label {
+    display: inline-block;
+    font-size: 10pt;
+}
+
+#itensSelecionados input, label {
+    display: inline-block;
+}
+
+#vendaCliente {
     display: block;
-    border: rgba(0, 0, 0, .2) solid 2px;
-    height: 90%;
-    width: 30%;
+    width: 35%;
+    height: 250px;
     float: right;
-    padding: 5px;
-    margin-top: -8%;
-    margin-right: 1%;
+    margin-right: 20px;
+    margin-top: 200px;
+    border: rgba(0, 0, 0, .2) solid 2px;
+    padding: 5PX;
 }
 
 #saidaDados {
     width: 99%;
     border: royalblue 1px solid;
-    display: block;
+    margin-top: 15%;
     float: left;
-    margin-top: 120%;
+    margin-right: 0px;
+    display: block;
 }
 
-#vendaCliente  input, label{
+#vendaCliente  input, labe l{
     display: inline-block;
 }
 
@@ -119,7 +201,10 @@ legend {
     text-align: center;
     font-size: 15pt;
     margin-top: 0px;
-    padding: 5px;
+}
+
+#notaFiscal input, label {
+    display: inline-block;
 }
 
 #fecharVenda {
@@ -130,6 +215,7 @@ legend {
     margin-right: 10px;
     padding: 10px;
     border: rgba(0, 0, 0, .2) solid 2px;
+
 }
 
 #fecharVenda h4 {
@@ -157,19 +243,119 @@ legend {
 }
 
 
-#formEndereco {
+fieldset#formEndereco {
     margin-left: auto;
     margin-right: auto;
 }
 
-th,td {
-    border: 1px solid black;
-    border-collapse: collapse;
-    font-size: 10pt;
-    padding: 3px;
+body {
+    font-size: .875rem;
+  }
+  
+  .feather {
+    width: 16px;
+    height: 16px;
+    vertical-align: text-bottom;
+  }
+  
+
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 650px;
+    background-color: #f1f1f1;
+}
+p a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+    color: rgb(5, 0, 0);
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
 }
 
-    form#consultas {
-        width: 100%;
-        border: seagreen 1px solid;
-    }
+#menu a.active {
+    background-color: #3c075f;
+    color: white;
+    width: 100%;
+}
+
+#menu a:hover:not(.active) {
+    background-color: rgb(77, 50, 50,50);
+    color: rgb(206, 200, 221);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.campo{
+    display: flex;
+    justify-content: center;
+    margin: 5px 0;
+}
+.campo label{
+    width: 100px;
+}
+.btn{
+    border: none;
+    background-color: #74032e;
+    color: white;
+    padding: 5px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    box-shadow: 2px 3px 5px rgb(10 74 67 / 42%);
+}
+.barrabotoes{
+    display: flex;
+    justify-content: space-between;
+    margin: 15px;
+}
+.index{
+width: 100vw;
+height: 100vh;
+background-color: #bebebe3a;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+text-align: center;
+font-style: oblique;
+color: lightseagreen;
+
+
+}
+
+
+#login{
+width: 100vw;
+height: 100vh;
+background-color: #bebebe3a;
+display: block;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+text-align: center;
+font-style: oblique;
+color: rgb(81, 21, 83);
+border: none;
+   
+
+}
+#cadatroFormecedor{
+    background-color: #bebebe3a;
+    flex-direction: row;
+    justify-content: none;
+    align-items: center;
+    text-align: top;
+    font-style: oblique;
+    color: rgb(81, 21, 83);
+    border: none;
+    margin: top 100% ;
+    
+    
+}
