--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -63,9 +63,10 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   font-family:sans-serif;
   font-size: 5px;
   font-weight: 200;
-  color: #1b70c5;
+  color: #b92525;
   text-align: center;
-  background-image: "cristofarma/";  
+  background-image: url("/cristofarma/img/logo.png");
+  
   margin-top: 15%;
  
 }
