--- a/css/bootstrap/bootstrap.css
+++ b/css/bootstrap/bootstrap.css
@@ -60,15 +60,14 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 .body {
   margin: 0;
-  font-family:sans-serif;
-  font-size: 5px;
+  font-family:Arial, Helvetica, sans-serif;
+  font-size: 0px;
   font-weight: 200;
-  color: #b92525;
+  color: #dc3545;
   text-align: center;
-  background-image: url("/cristofarma/img/logo.png");
-  
+  background-image: url("/cristofarma/img/logo.png");  
   margin-top: 15%;
- 
+  
 }
 
 [tabindex="-1"]:focus {
