--- a/css/estilo.css
+++ b/css/estilo.css
@@ -260,13 +260,6 @@ body {
   
 
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 650px;
-    background-color: #f1f1f1;
-}
 p a {
     display: flex;
     justify-content: center;
@@ -359,3 +352,36 @@ border: none;
     
     
 }
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+
+  
+
+  .btn-outline-danger {
+    color: #ff0000;
+    background-color: transparent;
+    background-image: none;
+    border-color: #f1eeef;
+    font: bold;
+  }
+  
+.btn-outline-danger:hover {
+    color: #fff;
+    background-color: #8b0210;
+    border-color: #f7f7f7;
+  }
