--- a/css/estilo.css
+++ b/css/estilo.css
@@ -74,16 +74,7 @@ form input {
     margin-right: 15px;
 }
 
-table {
-    float: left;
-    border-collapse: collapse;
-}
 
-table th, td {
-    border: solid black 1px;
-    padding: 2px;
-    font-size: 10pt;
-}
 
 #tabelaVendasCaixa {
     width: 800px;
@@ -302,6 +293,9 @@ p a {
     display: inline-block;
     font-size: 16px;
     box-shadow: 2px 3px 5px rgb(10 74 67 / 42%);
+    width: 100%;
+
+   
 }
 .barrabotoes{
     display: flex;
@@ -352,25 +346,7 @@ border: none;
     
     
 }
-.btn {
-    display: inline-block;
-    font-weight: 400;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
 
-  
 
   .btn-outline-danger {
     color: #ff0000;
@@ -378,6 +354,7 @@ border: none;
     background-image: none;
     border-color: #f1eeef;
     font: bold;
+    
   }
   
 .btn-outline-danger:hover {
@@ -385,3 +362,11 @@ border: none;
     background-color: #8b0210;
     border-color: #f7f7f7;
   }
+
+  .legend {
+      color: brown;
+      
+     
+
+  }
+  
