--- a/css/estilo.css
+++ b/css/estilo.css
@@ -26,21 +26,12 @@
 }
 
 label{
-    display: block  ;   
-    font-size: 10px;
     margin-bottom: 5px; 
     font: bolder;
-    
+    font-size: 13pt;
 }
-input {
-    background-color: white;
-    border: solid 1px #d6d6d6;
-    color: rgb(74 72 72);
-    width: 100%;
-    align-items: center;
-    
 
-}
+
  .inp {
     background-color: #f2f7f2;
     border: none;
@@ -52,48 +43,11 @@ input {
     width: 80%;
 }
 
-#feminino, #masculino {
-    display: inline-block;
-    margin-right: 20px;
-}
-
-form {
-    display:inline-block;
-    width: 31%;
-    height: 400px;
-    padding: 5px;
-    border: none;
-}
-
-form label, input {
-    display: inline;
-}
-
-form input {
-    margin-right: 15px;
-}
-
-#tabelaVendasCaixa {
-    width: 800px;
-    margin: 30px auto;
-}
 
 #tabelaNotaFiscal {
     width: 1100px;
 }
 
-table#produto {
-    width: 750px;
-    margin-top: 20px;
-}
-
-#cadastro {
-    float: left;
-    width: 100%;
-    margin-right: 1px;
-    margin-left: 0px;
-    margin-top: 10px;
-}
 
 #menu {
     list-style-type: none;
@@ -127,68 +81,18 @@ p a {
 
 section#principal {
     border:rgba(0, 0, 0, .1) 1px solid;
-    width: 50%;
-    height: 600px;
+    width: 40%;
+    height: 500px;
     display: block;
     margin: auto;
     padding: 10px;
-    margin-top: 50px;
-    
+    border-radius: 5%;
 }
 
-section#btn {
-    border: royalblue 1px solid;
-    width: 89%;    
-    background-color: white;
-    border: solid 1px #d6d6d6;
-    color: rgb(74 72 72);
-    padding: 5px 32px;
-    width: 100%;
-    height: 50px;
-    float: right;
-    margin-top: 0px;
-}
-
-form input#btnCadastrar {
-    margin-top: 20px;
-    cursor: pointer;
-    line-height: 10px;
-    width: 20%; 
-    margin-left: 40%;
-    height: 25px;
-}
 
 #relatorioGerencialVendas input, label {
     display: inline-block;
-    font-size: 10pt;
-}
-
-#itensSelecionados input, label {
-    display: inline-block;
-}
-
-#vendaCliente {
-    display: block;
-    width: 35%;
-    height: 250px;
-    float: right;
-    margin-right: 20px;
-    margin-top: 200px;
-    border: rgba(0, 0, 0, .2) solid 2px;
-    padding: 5PX;
-}
-
-#saidaDados {
-    width: 99%;
-    border: royalblue 1px solid;
-    margin-top: 15%;
-    float: left;
-    margin-right: 0px;
-    display: block;
-}
-
-#vendaCliente  input, labe l{
-    display: inline-block;
+    font-size: 13pt;
 }
 
 legend {
@@ -198,49 +102,11 @@ legend {
 }
 
 #notaFiscal input, label {
-    display: inline-block;
-}
-
-#fecharVenda {
-    width: 20%;
-    height: 500px;
-    float: right;
-    margin-top: 10px;
-    margin-right: 10px;
-    padding: 10px;
-    border: rgba(0, 0, 0, .2) solid 2px;
+  
+    font-size: 13pt;
 
 }
 
-#fecharVenda h4 {
-    font-size: 15pt;
-}
-
-#fecharVenda output {
-    border: rgba(0, 0, 0, .1) solid 2px;
-    display: block;
-    height: 40px;
-    width: 50%;
-    font-size: 20px;
-    margin-bottom: 30px;
-}
-
-#fecharVenda input {
-    height: 40px;
-    width: 50%;
-    font-size: 20px;
-    margin-bottom: 30px;
-}
-
-#fecharVenda p {
-    margin-bottom: 10px;
-}
-
-
-fieldset#formEndereco {
-    margin-left: auto;
-    margin-right: auto;
-}
 
 body {
     font-size: .875rem;
@@ -252,16 +118,15 @@ body {
     vertical-align: text-bottom;
   }
   
-p a {
+p, a {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
     padding: 0;
     margin: 0;
     color: rgb(5, 0, 0);
-    width: 100%;
-    height: 100%;
     text-decoration: none;
+    font-size: 13pt;
+
 }
 
 #menu a.active {
@@ -281,9 +146,11 @@ p a {
     justify-content: center;
     margin: 5px 0;
 }
+
 .campo label{
     width: 100px;
 }
+
 .btn{
     border: none;
     background-color: #74032e;
@@ -292,9 +159,12 @@ p a {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 16px;
+    font-size: 19px;
     box-shadow: 2px 3px 5px rgb(10 74 67 / 42%);
-    width: 100%;
+    margin-left: 35%;
+    margin-top: 10pt;
+    
+  
 }
 
 .barrabotoes{
@@ -333,23 +203,11 @@ border: none;
 
 }
 
-#cadatroFormecedor{
-    background-color: #bebebe3a;
-    flex-direction: row;
-    justify-content: none;
-    align-items: center;
-    text-align: top;
-    font-style: oblique;
-    color: rgb(81, 21, 83);
-    border: none;
-    margin: top 100% ;
-}
-
 
   .btn-outline-danger {
     color: #ff0000;
     background-color: transparent;
-    background-image: none;
+
     border-color: #f1eeef;
     font: bold;
   }
@@ -364,4 +222,47 @@ border: none;
       color: brown;
 
   }
+
+  #clienteVenda {
+      border: solid red 1px ;
+      width: 99%;
+      float: left;
+      font-size: 13pt;
+
+  }
+
+  #itensSelecionados {
+
+      border: solid green 1px ;
+      width: 50%;
+      font-size: 13pt;
+      height: 550px;
+
+
+  }
   
+#saidaDados {
+    width: 99%;
+    border: royalblue 1px solid;
+    font-size: 13pt;
+    float: left;
+    margin-top: 5px;
+
+
+}
+
+#adicionaRemove {
+    border: solid 1px orange;
+    float: right;
+    width: 49%;
+
+}
+
+#itensAdicionados {
+
+    border: 1px solid blueviolet;
+    float: right;
+    width: 49%;
+    height: 510px;
+    margin-top: 5px;
+}
