--- a/css/estilo.css
+++ b/css/estilo.css
@@ -25,11 +25,6 @@
     margin-top: 80px;
 }
 
-label{
-    margin-bottom: 5px; 
-    font: bolder;
-    font-size: 13pt;
-}
 
 
  .inp {
@@ -223,46 +218,87 @@ border: none;
 
   }
 
-  #clienteVenda {
-      border: solid red 1px ;
-      width: 99%;
-      float: left;
-      font-size: 13pt;
-
-  }
-
-  #itensSelecionados {
+ #itensSelecionados {
 
       border: solid green 1px ;
-      width: 50%;
+      width: 40%;
       font-size: 13pt;
-      height: 550px;
-
+      height: 370px;
 
   }
   
 #saidaDados {
-    width: 99%;
+    width: 40%;
     border: royalblue 1px solid;
     font-size: 13pt;
     float: left;
     margin-top: 5px;
+    height: 180px;
 
 
 }
 
-#adicionaRemove {
+#clienteVenda {
     border: solid 1px orange;
     float: right;
     width: 49%;
-
+    margin-top: 5px;
+    height: 180px;
 }
 
 #itensAdicionados {
 
     border: 1px solid blueviolet;
     float: right;
-    width: 49%;
-    height: 510px;
-    margin-top: 5px;
+    width: 59%;
+    height: 370px;
 }
+
+#fecharVenda{
+
+        text-transform: capitalize;
+        font-size: 18pt ;
+        width: 35%;
+        border: solid palevioletred 1px;
+        height: 600px;  
+        margin-left: 60%;
+        padding: 10px;
+}
+
+    #fecharVenda input{
+
+        text-align: right;
+        margin-top: 10px;
+        font-weight: bolder;
+        float: right;
+        
+    }
+
+    #fecharVenda label{
+
+        text-transform: uppercase;
+        font-size: 18pt ;
+        margin-top: 10px;
+        font-weight: bolder;
+        text-align: right;
+        
+
+    }
+
+    #troco {
+
+        text-decoration-color: red;
+    }
+
+    #listaVendas{
+
+        border: rebeccapurple solid 1px;
+        width: 58%;
+        height: 600px;
+        float: left;
+        margin-left: 10px;
+    }
+
+    #principalCaixa {
+        border: solid 1px green;
+    }
