--- a/css/bootstrap/nav/navegador.css
+++ b/css/bootstrap/nav/navegador.css
@@ -1522,10 +1522,13 @@ pre code {
 
 .table th,
 .table td {
-  padding: 0.75rem;
+  border: solid;
+  padding: 0.50rem;
   vertical-align: top;
-  border-top: 10px solid #5f0101;
   font-size: 10px;
+  font-style: var(--gray);
+  
+ 
 }
 
 .table thead th {
