--- a/css/estilo.css
+++ b/css/estilo.css
@@ -62,12 +62,12 @@ p a {
 
 section#principal {
     border:rgba(0, 0, 0, .1) 1px solid;
+    border-radius: 5%;
     width: 50%;
     height: 650px;
     display: block;
     margin: auto;
     padding: 10px;
-    border-radius: 5%;
 }
 
 #principal, label, input {
@@ -205,18 +205,22 @@ border: none;
 
 #dadosClienteVenda {
     float:  right; 
-    border: solid green 1px; width: 49%;
-    margin-top: 50px;
-    height: 250px;
-
+    border: none;
+    width: 35%;
+    margin-top:20px;
+    height: 280px;
+    margin-right: 3px;
 }
 
 #itensAdicionados {
 
-    border: 1px solid blueviolet;
+    border:rgba(0, 0, 0, .2) 2px solid;
+    margin-left: 3px;
+    border-radius: 2%;
+
     float: left;
-    width: 50%;
-    height: 550px;
+    width: 63%;
+    height: 600px;
     display: block;
 
 }
@@ -224,11 +228,13 @@ border: none;
 #saidaValorVenda {
 
     float: right; 
-    border: royalblue 1px solid; 
-    width: 49%;
+    border: none;
+    border-radius: 5%;
+    width: 35%;
     margin-top: 10px;
+    margin-right: 3px;
     display: block;
-    height: 200px;
+    height: 230px;
 
 }
 
@@ -237,9 +243,11 @@ border: none;
         text-transform: capitalize;
         font-size: 18pt ;
         width: 35%;
-        border: solid palevioletred 1px;
-        height: 600px;  
-        margin-left: 60%;
+        border:rgba(0, 0, 0, .2) 2px solid;
+        border-radius: 3%;
+        height: 630px;  
+        float: right;
+        margin-right: 10px;
         padding: 10px;
 }
 
@@ -259,9 +267,10 @@ border: none;
 
     #listaVendas{
 
-        border: rebeccapurple solid 1px;
-        width: 58%;
-        height: 600px;
+        border:rgba(0, 0, 0, .2) 2px solid;
+        border-radius: 3%;
+        height: 630px;  
+        width: 63%;
         float: left;
         margin-left: 10px;
     }
