--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,10 +2,7 @@
     padding: 0px;
     margin: 0px;
     font-family: sans-serif;
-}
-
-#principalHome {
-
+    font-size: 13px;
 }
 
 #nomeEmpresa {
@@ -19,11 +16,6 @@
     border:  #8b0211 2px solid; 
     padding: 10px;
 }
-
-#tabelaNotaFiscal {
-    width: 1100px;
-}
-
 
 #menu {
     list-style-type: none;
@@ -45,14 +37,6 @@
     border-collapse: collapse;
     text-decoration: none;
     text-align: center;
-}
-
-p a {
-    margin-top: 10px;
-    padding-top: 20px;
-    display: block;
-    color: whitesmoke;
-    text-decoration: none;
 }
 
 section#principal {
@@ -77,29 +61,11 @@ legend {
     display: inline-block;
 
 }
-
-
-body {
-    font-size: .875rem;
-
-  }
-  
   .feather {
     width: 16px;
     height: 16px;
     vertical-align: text-bottom;
   }
-  
-p, a {
-    display: flex;
-    justify-content: left;
-    padding: 0;
-    margin: 0;
-    color: rgb(5, 0, 0);
-    text-decoration: none;
-    font-size: 13pt;
-
-}
 
 #menu a.active {
     background-color: #3c075f;
@@ -133,7 +99,6 @@ p, a {
     margin-left: 35%;
     margin-top: 10pt;
     
-  
 }
 
 .barrabotoes{
@@ -171,7 +136,6 @@ color: rgb(81, 21, 83);
 border: none;
 
 }
-
 
   .btn-outline-danger {
     color: #ff0000;
@@ -284,4 +248,25 @@ border: none;
 
     #principalCaixa {
     
+    }
+
+    #acaoEditar {
+        border: solid green 1px;
+        background-color: green;
+        color: white;
+        text-decoration: none;
+        font-size: 12px;
+        padding: 7px;
+        margin-left: 5px;
+    }
+
+    #acaoExcluir {
+        border: solid red 1px;
+        background-color: red;
+        color: white;
+        text-decoration: none;
+        font-size: 12px;
+        padding: 7px;
+        margin-top: 2px;
+        margin-left: 5px;
     }
