--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,10 +5,6 @@
     font-size: 13px;
 }
 
-input {
-    text-transform: uppercase;
-}
-
 #nomeEmpresa {
     font-size: 65pt;
     text-align: center;
@@ -174,19 +170,56 @@ border: none;
     height: 70px;
     margin-left: 20px;
     padding: 10px;
+    background-image: url(/img/serch.png);
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-position: center;
 }
+
+#pagamentoTipoVendedor {
+
+    float: right; 
+    padding: 10px; 
+    height: 150px;
+    width: 18%;
+    position: relative;
+    height: 100px;
+    margin-top: -6%;
+    padding: 20px;
+    font-size: 13pt;
+
+}
+
+#pagamentoTipoVendedor select {
+
+    display: inline-block;
+    float: right;
+}
+
 
 #dadosClienteVenda {
     float:  right; 
-    border: none;
     width: 30%;
-    margin-top:2%;
-    height: 250px;
+    height: 220px;
     margin-right: 3px;
     border-bottom: rgba(0, 0, 0, .2) 3px solid;
+    border-radius: 3%;
     padding: 10px;
+    margin-top: 1%;
+}
 
+#dadosClienteVenda input{
 
+    display: inline-block;
+}
+
+#adicionaClienteVenda{
+
+    border: dotted 1px red;
+    width: 50px;
+    height: 50px;
+    float: right;
+    margin-top: -5%;
 }
 
 #itensAdicionados {
@@ -198,7 +231,21 @@ border: none;
     width: 69%;
     height: 620px;
     display: block;
+}
 
+#removeProdutoVenda {
+
+    display: inline-block;
+    background-color: red;
+    Border: solid red 1px; 
+    width: 20px;
+    height: 20px;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    font-size: 10pt; 
+    font-weight: bolder;
+    border-radius: 3px;
 }
 
 #saidaValorVenda {
@@ -207,10 +254,17 @@ border: none;
     border-radius: 5%;
     width: 30%;
     margin-right: 3px;
-    display: block;
-    height: 250px;
+    height: 240px;
     padding: 10px;
+    margin-top: 40px;
+    border-bottom: rgba(0, 0, 0, .2) 3px solid;
+    border-radius: 3%; 
+}
 
+#saidaValorVenda input {
+
+    display: inline-block;
+    float: right;
 }
 
 #fecharVenda{
