--- a/css/estilo.css
+++ b/css/estilo.css
@@ -352,11 +352,20 @@ border: none;
 
     #divDetalharVenda {
 
-        border: solid 1px rgba(0, 0, 0, .2);
+        border: solid 1px rgba(0, 0, 0, .1);
         width: 68%;
         height: 650px;
         margin-left: 1%;
         float: left;
+    }
+
+    #descricaoVendaCaixa {
+        
+        background-color: rgba(124, 134, 156, 0.2); 
+        width: 80%;
+        margin-left: 10%;
+        height: 43em;
+        border-radius: 10% 1% 10% 1%;
 
     }
 
