--- a/css/estilo.css
+++ b/css/estilo.css
@@ -3,6 +3,8 @@
     margin: 0px;
     font-family: sans-serif;
     font-size: 13px;
+    
+    
 }
 
 #nomeEmpresa {
@@ -193,18 +195,27 @@ border: none;
 #divDataHoraVenda{
 
     float: right;
-    margin-top: -5%;
-    margin-right: 60px;
+
+    margin-right: 80px;
 }
+
+#divDataHoraVenda label{ 
+
+    font-size: 20px;
+
+
+}
+
 
 #divPagamentoTipo {
 
     float: right; 
     padding: 10px; 
     width: 18%;
-    height: 60px;
-    margin-top: -3%;
+    height: 50px;
+  
     font-size: 13pt;
+    margin-top: -2%;
 }
 
 #divPagamentoTipo select {
@@ -243,8 +254,8 @@ border: none;
     width: 30%;
     height: 200px;
     margin-right: 3px;
-    border-bottom: rgba(0, 0, 0, .2) 3px solid;
     padding: 10px;
+    border: red 1px solid;
  
 }
 
@@ -268,7 +279,7 @@ border: none;
     margin-left: 3px;
     float: left;
     width: 69%;
-    height: 630px;
+    height: 620px;
     display: block;
 }
 
@@ -293,17 +304,6 @@ border: none;
     background-color: #ff0000;
 }
 
-#saidaValorVenda {
-
-    float: right; 
-    width: 30%;
-    margin-right: 3px;
-    height: 240px;
-    padding: 10px;
-    margin-top: 20%;
-    border-bottom: rgba(0, 0, 0, .2) 3px solid;
-    border-radius: 3%;
-}
 
 #saidaValorVenda input {
 
@@ -348,13 +348,25 @@ border: none;
         float: left;
     }
 
+ 
     #descricaoVendaCaixa {
         
-        background-color: rgba(124, 134, 156, 0.2); 
+        background-color: rgba(168, 57, 68); 
         width: 80%;
         margin-left: 10%;
         height: 43em;
         border-radius: 10% 1% 10% 1%;
+        padding: 5%;
+
+    }
+    
+    #descricaoVendaCaixa p {
+
+        color: white;
+        font-size: 15pt;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        text-align: center;
+        
 
     }
 
@@ -430,8 +442,8 @@ border: none;
 
     .scroll {
 
-        overflow-x: auto;
-        overflow-y: auto;
+        max-width: 100%;
+        overflow: auto;
     }
 
     #divSair {
@@ -442,7 +454,6 @@ border: none;
         margin-right: 1%;
         margin-left: 80%;
         margin-top: -3%;
-    
     }
 
     #divSair a{
