--- a/css/estilo.css
+++ b/css/estilo.css
@@ -195,17 +195,13 @@ border: none;
 #divDataHoraVenda{
 
     float: right;
-
     margin-right: 80px;
 }
 
 #divDataHoraVenda label{ 
 
     font-size: 20px;
-
-
 }
-
 
 #divPagamentoTipo {
 
@@ -213,7 +209,6 @@ border: none;
     padding: 10px; 
     width: 18%;
     height: 50px;
-  
     font-size: 13pt;
     margin-top: -2%;
 }
@@ -221,6 +216,13 @@ border: none;
 #divPagamentoTipo select {
 
     display: inline-block;
+
+}
+
+#divDabosVenda label{
+
+    font-weight: bold;
+    font-size: 15px;
 
 }
 
@@ -244,19 +246,6 @@ border: none;
     float: right;
     margin-top: -25%;
     margin-right: 10px;
-
-}
-
-
-#dadosClienteVenda {
-
-    float:  right; 
-    width: 30%;
-    height: 200px;
-    margin-right: 3px;
-    padding: 10px;
-    border: red 1px solid;
- 
 }
 
 #dadosClienteVenda input{
@@ -279,7 +268,7 @@ border: none;
     margin-left: 3px;
     float: left;
     width: 69%;
-    height: 620px;
+    height: 650px;
     display: block;
 }
 
@@ -293,7 +282,7 @@ border: none;
     color: white;
     border: solid 1px red;
     background-color: salmon;
-    font-size: solid 1px10pt; 
+    font-size: solid 1px 10pt; 
     font-weight: bolder;
     border-radius: 3px;
 }
@@ -317,10 +306,11 @@ border: none;
         font-size: 18pt ;
         width: 29%;
         border:rgba(0, 0, 0, .2) 2px solid;
-        height: 650px;  
+        height: 660px;  
         float: right;
         margin-right: 1%;
         padding: 10px;
+        border-radius: 5%;
 }
 
     #fecharVendaCaixa label{
@@ -329,23 +319,32 @@ border: none;
         font-size: 13pt ;
         font-weight: bolder;
         float: right;
+        margin-right: 5%;
     }
 
     #fecharVendaCaixa input{
 
-        font-size: 25pt;
+        font-size: 30pt;
         height: auto;
         text-align: right;
         float: right;
+        margin-right: 5%;
+        background-color: rgba(168, 57, 68);
+        color: yellow;
+        font-weight: bold;
+        box-shadow: 5px 5px 0px #333;
+        -webkit-box-shadow: -25px 20px 20px rgb(92, 92, 70);
+        -moz-box-shadow: 5px 5px 0px #333;
     }
 
     #divDetalharVenda {
 
-        border: solid 1px rgba(0, 0, 0, .1);
+        border:rgba(0, 0, 0, .2) 2px solid;
         width: 68%;
-        height: 650px;
+        height: 660px;
         margin-left: 1%;
         float: left;
+        border-radius: 5%;
     }
 
  
@@ -355,9 +354,7 @@ border: none;
         width: 80%;
         margin-left: 10%;
         height: 43em;
-        border-radius: 10% 1% 10% 1%;
         padding: 5%;
-
     }
     
     #descricaoVendaCaixa p {
@@ -366,8 +363,6 @@ border: none;
         font-size: 15pt;
         font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         text-align: center;
-        
-
     }
 
     #listaVendas{
@@ -377,7 +372,6 @@ border: none;
         width: 98%;
         float: left;
         margin-left: 1%;
-        
     }
 
     .acaoVerde {
