--- a/css/estilo.css
+++ b/css/estilo.css
@@ -338,6 +338,7 @@ border: none;
     #divDetalharVenda {
 
         border:rgba(0, 0, 0, .2) 2px solid;
+        background-color: rgba(168, 57, 68); 
         width: 68%;
         height: 660px;
         margin-left: 1%;
@@ -349,17 +350,16 @@ border: none;
     #descricaoVendaCaixa {
         
         background-color: rgba(168, 57, 68); 
-        width: 80%;
-        margin-left: 10%;
-        height: 43em;
-        padding: 5%;
+        width: 100%;
+        height: 30em;
+        padding: 1%;
     }
     
     #descricaoVendaCaixa p {
 
         color: white;
         font-size: 15pt;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
         text-align: center;
     }
 
