--- a/css/estilo.css
+++ b/css/estilo.css
@@ -160,7 +160,8 @@ border: none;
     color: #ff0000;
     background-color: transparent;
     border-color: #f1eeef;
-    font: bold;
+    font-weight: bold;
+    background-color: #D3D3D3;
   }
   
 .btn-outline-danger:hover {
