--- a/css/estilo.css
+++ b/css/estilo.css
@@ -45,7 +45,7 @@
 
 section#principal {
 
-    border:rgba(0, 0, 0, .1) 1px solid;
+    border:rgba(168, 57, 68) solid 1px;
     border-radius: 5%;
     width: 50%;
     height: 650px;
@@ -262,7 +262,7 @@ border: none;
 
 #itensAdicionados {
 
-    border:rgba(0, 0, 0, .2) 2px solid;
+    border: rgba(168, 57, 68) solid 1px; 
     margin-left: 3px;
     float: left;
     width: 69%;
@@ -303,7 +303,7 @@ border: none;
         text-transform: capitalize;
         font-size: 18pt ;
         width: 29%;
-        border:rgba(0, 0, 0, .2) 2px solid;
+        border: rgba(168, 57, 68) solid 1px; 
         height: 660px;  
         float: right;
         margin-right: 1%;
@@ -337,8 +337,8 @@ border: none;
 
     #divDetalharVenda {
 
-        border:rgba(0, 0, 0, .2) 2px solid;
-        background-color: rgba(168, 57, 68); 
+        border: rgba(168, 57, 68) solid 1px;
+        background-color: rgb(186, 75, 79);
         width: 68%;
         height: 660px;
         margin-left: 1%;
@@ -349,9 +349,10 @@ border: none;
  
     #descricaoVendaCaixa {
         
-        background-color: rgba(168, 57, 68); 
+        background-color: rgb(186, 75, 79);
+      
         width: 100%;
-        height: 30em;
+        height: 42em;
         padding: 1%;
     }
     
@@ -365,7 +366,7 @@ border: none;
 
     #listaVendas{
 
-        border:rgba(0, 0, 0, .2) 2px solid;
+        border: rgba(168, 57, 68) solid 1px; 
         height: 650px;  
         width: 98%;
         float: left;
