Icones tela inicial

--- a/css/bootstrap/nav/navegador.css
+++ b/css/bootstrap/nav/navegador.css
@@ -9419,5 +9419,13 @@ border-width:10px;
 border-color: lightcoral;
 
  }
+ #icones{
+     text-align: center;
+     padding-bottom: 5px;
+     padding-top: 25px;
+     padding-right: 100px;
+     margin-left: 50px;
+
+ }
 
 /*# sourceMappingURL=bootstrap.css.map */
