Bordas dos icones

--- a/css/bootstrap/nav/navegador.css
+++ b/css/bootstrap/nav/navegador.css
@@ -9426,7 +9426,13 @@ border-color: lightcoral;
      padding-top: 25px;
      padding-right: 100px;
      margin-left: 50px;
-
+ }
+ .bordaIcones{
+    border-width:1px;
+    border-top:17px;
+    border-bottom: 20px;  
+    border-style: solid;
+    border-color:#adb5bd;
  }
 
 /*# sourceMappingURL=bootstrap.css.map */
