--- a/css/bootstrap/nav/navegador.css
+++ b/css/bootstrap/nav/navegador.css
@@ -9411,9 +9411,9 @@ a.text-dark:focus {
  }
  #relatorio{
 border-style: groove;
-margin-left: 25%;
-margin-right: 25%;
-text-align: left;
+margin-left: 3%;
+margin-right: 3%;
+text-align: center;
 font-weight: bold;
 border-width:10px;
 border-color: lightcoral;
